# svg-helpers

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: animated.py  banana.py  banner.py  circle.py  cloud.py  japan.py  jinja_templates.py  lots_of_ways_to_make_svg.py  make_for_inkscape.py  text.py
svg_helpers/: __init__.py  element.py  recipes.py  shapely_helpers.py
tests/: test_basics.py  test_recipes.py  test_shapes.py  test_text.py
