[tool.poetry]
name = "svg-helpers"
version = "0.3.0"
description = ""
authors = ["stringertheory <mike.stringer.internet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^5.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
shapely = "^2.0.2"
pytest-cov = "^4.1.0"
tox = "^4.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
