[project]
name = "svg-helpers"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "stringertheory", email = "mike.stringer.internet@gmail.com"},
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "shapely>=2.0.2",
    "pytest-cov>=4.1.0",
    "jinja2>=3.1.3",
    "ruff>=0.15.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["svg_helpers"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (mutable defaults, etc.)
    "UP",  # pyupgrade (modernize syntax)
]
