[project]
name = "svg-helpers"
version = "0.4.1"
authors = [
    {name = "stringertheory", email = "mike.stringer.internet@gmail.com"},
]
description = "Tools to help make SVG graphics with Python."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["svg", "graphics", "xml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = []

[project.urls]
Homepage = "https://github.com/stringertheory/svg-helpers"
Repository = "https://github.com/stringertheory/svg-helpers"
Issues = "https://github.com/stringertheory/svg-helpers/issues"

[dependency-groups]
dev = [
    "pytest>=7.4.4",
    "shapely>=2.0.2",
    "pytest-cov>=4.1.0",
    "jinja2>=3.1.3",
    "ruff>=0.15.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["svg_helpers"]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
extend-select = [
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear (mutable defaults, etc.)
    "UP",  # pyupgrade (modernize syntax)
]
